# rust-gRPC-microservice-tutorial

./: Readme.md
api-gateway/: .env.example  Cargo.toml
api-gateway/src/: main.rs
api-gateway/src/core/: app.rs  config.rs
api-gateway/src/models/schemas/: app.rs  mod.rs  task.rs
api-gateway/src/routes/: task.rs
grpc-service/: Cargo.toml  build.rs
grpc-service/protobuf/: task_service.proto
grpc-service/src/: lib.rs
task-service/: .env.example  Cargo.toml
task-service/migrations/: 20240528220524_init.down.sql  20240528220524_init.up.sql
task-service/src/: lib.rs  main.rs
task-service/src/core/: app.rs  config.rs
task-service/src/grpc/: handlers.rs
task-service/src/models/: mod.rs
task-service/src/models/domain/: task.rs
task-service/src/models/schemas/: app.rs  mod.rs  task.rs
task-service/src/repository/: db.rs  mod.rs
task-service/src/repository/crud/: task.rs
